    Build-Depends field.
  * debian-rules-uses-unnecessary-dh-argument: Cope with non-debhelper
    packages.
  * Cope with comments in debian/compat.
  * maintainer-also-in-uploaders: Support removing only item in the
    list.
  * Add build-dependency on devscripts, for dch tests.
  * debian-watch-file-is-missing: fall back to running setup with
    python2 if python3 does not work.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 07 Oct 2019 01:09:58 +0000

lintian-brush (0.34) unstable; urgency=medium

  * Add support for renamed tag: rules-requires-root-implicitly -> rules-
    requires-root-missing.
  * unused-license-paragraph-in-dep5-copyright: Ignore
    NotMatchineReadableError.
  * vcs-field-bitrotted: don't include URLs that vcswatch reports as
    errorring.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 04 Oct 2019 02:02:36 +0000

lintian-brush (0.33) unstable; urgency=medium

  * Support multi-line git commands in README files.
  * Fix existing repository URLs in debian/upstream/metadata.
  * Add basic bash completion support. Closes: #939132
  * Set Rules-Requires-Root field.
  * Add basic zsh completion support.
  * Add fixer for older-source-format.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 04 Oct 2019 00:43:58 +0000

lintian-brush (0.32) unstable; urgency=medium

  * Add flag to disable interaction with external services.
  * Don't print error messages when unable to update non-machine-
    readable copyright files.
  * Support postgresql debian/control.in templates.
  * Add fixer for init.d-script-needs-depends-on-lsb-base.
  * Add fixer for unused-license-paragraph-in-dep5-copyright.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 30 Sep 2019 00:03:44 +0000

lintian-brush (0.31) unstable; urgency=medium

  * debian-rules-sets-dpkg-architecture-variable: actually drop variable
    when include is already present.
  * debian-changelog-has-wrong-day-of-week: Properly ignore unparseable
    dates.