@@ -177,6 +177,8 @@ Lintian-Tags: quilt-series-without-trailing-newline
 Fix-Script: renamed-tag.py
 Lintian-Tags: renamed-tag
 
+Fix-Script: copyright-continued-lines-with-space.py
+
 Fix-Script: space-in-std-shortname-in-dep5-copyright.py
 Lintian-Tags: space-in-std-shortname-in-dep5-copyright
 
