@@ -1,0 +1,1 @@
+debian/copyright: Use spaces rather than tabs in continuation lines.
